# icmc-open-chatbot

./: .env  .gitignore  README.md  boot.sh  pyproject.toml  run.py
.github/: pull_request_template.md
.github/workflows/: python-app.yml
docker/: Dockerfile  docker-compose.yml
docs/pt_br/: CONTRIBUICAO.md  ESTRUTURA.md  INSTALACAO.md
src/: main.py
src/api/controllers/: __init__.py  chat.py  crag.py  files.py  guardrails.py
src/api/models/: __init__.py  api.py  files.py
src/api/routes/: __init__.py  chat.py  crag.py  files.py
src/database/mongodb/: connector.py
src/infrastructure/config/: __init__.py  llm.py  settings.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/chromadb/: connector.py
src/infrastructure/database/mongodb/: connector.py  utils.py
src/services/: __init__.py
src/services/crag/: __init__.py  graph.py  nodes.py  prompts.py  templates.py
src/services/custom_chat/: chat.py  tools.py
src/services/document_reader/: __init__.py  reader.py
src/services/llama_guard/: llama_guard.py
tests/: docker-compose.test.yml  init-mongo.js
tests/database/mongodb/: test_mongodb.py
