[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo (>=4.11,<5.0)",
    "langgraph (>=0.2.68,<0.3.0)",
    "langchain (>=0.3.16,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-openai (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
