[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Mendonça Ortega",email = "gustavo_ortega@usp.br"}
]
readme = "README.md"

dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo (>=4.11,<5.0)",
    "langgraph (>=0.2.68,<0.3.0)",
    "langchain (>=0.3.16,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "chromadb (>=0.5.4,<0.6.3)",
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
motor = "^3.7.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
